--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="The official website of Viral Parmar, a full stack web developer and an aspiring data scientist. Follow him everywhere on the internet @virustark24">
 	<meta name="keywords" content="Viral Parmar @virustark24 https://viralparmar.ml viralparmar Viral Parmar Official Website">
-	<meta name="author" content="Viral Parmar - @virustark24 https://viralparmar.ml virustark24@gmail.com +919167284988">
+	<meta name="author" content="Viral Parmar - @virustark24 https://viralparmar.ml virustark24@gmail.com +919167284988 https://github.com/virustark24/personal-website">
 	<title>Viral Parmar - @virustark24 [OFFICIAL WEBSITE]</title>
 	<link rel="icon" href="favicon.png" type="image/png" />
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
