--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/white-grey.css">	
+	<link rel="stylesheet" href="css/themes/blue-green.css">	
 </head>
 <body>
 	<main>
