--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<a target="_blank" href="https://instagram.com/virustark24"><i class="fab fa-instagram"></i></a>
 			<a target="_blank" href="https://twitter.com/virustark24"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://medium.com/@virustark24"><i class="fab fa-medium-m"></i></a>
-			<a target="_blank" href="mailto:virustark24@gmail.com"><i class="fab fa-telegram-plane"></i></a>
+			<a target="_blank" href="mailto:viralparmar@aol.com"><i class="fab fa-telegram-plane"></i></a>
 			<a target="_blank" href="https://github.com/virustark24"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://linkedin.com/in/virustark24"><i class="fab fa-linkedin"></i></a>			
 		</div>
